cmake_minimum_required (VERSION 3.8)

project ("leetcode")

add_subdirectory ("0001.Two Sum")
add_subdirectory ("0002.Add Two Numbers")
add_subdirectory ("0003.Longest Substring Without Repeating Characters")
add_subdirectory ("0004.Median of Two Sorted Arrays")
add_subdirectory ("0005.Longest Palindromic Substring")

add_subdirectory ("0010.Regular Expression Matching")
add_subdirectory ("0011.Container With Most Water")


