cmake_minimum_required (VERSION 3.8)

project ("leetcode")

add_subdirectory ("0001.Two Sum")
add_subdirectory ("0002.Add Two Numbers")
add_subdirectory ("0003.Longest Substring Without Repeating Characters")
add_subdirectory ("0004.Median of Two Sorted Arrays")
add_subdirectory ("0005.Longest Palindromic Substring")

add_subdirectory ("0010.Regular Expression Matching")
add_subdirectory ("0011.Container With Most Water")


add_subdirectory ("0015.3Sum")

add_subdirectory ("0017.Letter Combinations of a Phone Number")

add_subdirectory ("0019.Remove Nth Node From End of List")
add_subdirectory ("0020.Valid Parentheses")
add_subdirectory ("0021.Merge Two Sorted Lists")
add_subdirectory ("0022.Generate Parentheses")
add_subdirectory ("0023.Merge k Sorted Lists")




